rules/initial-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vertx-istio-circuit-breaker-name-destination-initial
spec:
  host: vertx-istio-circuit-breaker-name
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 10
