rules/name-with-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vertx-istio-circuit-breaker-delayed-name
spec:
  hosts:
  - vertx-istio-circuit-breaker-name
  http:
  - fault:
      delay:
        percent: 50
        fixedDelay: 1s
    route:
    - destination:
        port:
          number: 8080
        host: vertx-istio-circuit-breaker-name
