rules/restrictive-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vertx-istio-circuit-breaker-name-destination-restrictive
spec:
  host: vertx-istio-circuit-breaker-name
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 5s
      maxEjectionPercent: 100
